--- a/app/src/main/res/layout-land/activity_user_registration.xml
+++ b/app/src/main/res/layout-land/activity_user_registration.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    style="@style/AppTheme"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.gmonetix.slambook.user_registration.UserRegistrationActivity">
