--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -80,7 +80,18 @@
                 android:id="@+id/register_from_login_screen"
                 android:layout_margin="20dp"
                 android:textColor="#000000"
-                android:text="Not a member yet? Sign up!"
+                android:text="Not a member yet? Sign up !"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_below="@+id/register_from_login_screen"
+                android:gravity="center"
+                android:id="@+id/forgot_password_login_screen"
+                android:layout_marginBottom="20dp"
+                android:textColor="#000000"
+                android:text="Forgot Password !"
                 android:textSize="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -89,7 +100,6 @@
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/app_bar"
                 android:layout_marginTop="40dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
